# docminify

./: LICENSE  README.md  pyproject.toml
docminify/core/: __init__.py  registry.py  service.py
docminify/optimizers/: __init__.py  base.py  office_optimizer.py  pdf_optimizer.py  text_optimizer.py  zip_optimizer.py
docminify/utils/: __init__.py
docminify/web/: app.py
docminify/web/static/css/: styles.css
docminify/web/static/js/: app.js
docminify/web/templates/: account.html  base.html  dashboard.html  index.html
outputs/: optimized_11d780e3-ca20-4919-a8d2-98d2f66c6abf_Polonya Tarihi Çeviri.docx  optimized_6bab8b89-4fbf-4635-bffe-038768d42695_przykladowe_pytania.docx  optimized_9d722480-bcf7-41ec-88d2-9701f513fcff_Józef Piłsudski 1867.docx  optimized_c52a581a-0e85-4bba-8060-4e4afa7dcc20_PLN225 Final Ödev.docx
tests/: test_optimization_result.py
tests/.github/workflows/: ci.yml
