[project]
name = "docminify"
version = "0.1.0"
description = "Plugin-based document optimization framework"
authors = [
    { name = "Emirhan Koçak" }
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]